--- a/app/Resources/views/report/product_stock/export.xml.twig
+++ b/app/Resources/views/report/product_stock/export.xml.twig
@@ -39,6 +39,9 @@
                 </ss:Cell>
             </ss:Row>
             {% for product in grid.data %}
+                {% set quantityStock = inventoryRepository.getStockByProduct(product, startDate, endDate) %}
+                {% set averagePrice = inventoryRepository.getUnitPriceByProduct(product, startDate, endDate) %}
+                {% set totalPrice = quantityStock * averagePrice %}
                 <ss:Row ss:StyleID="Level1">
                     <ss:Cell ss:Index="1">
                         <ss:Data ss:Type="String">{{ product.name|default }}</ss:Data>
@@ -53,13 +56,13 @@
                         <ss:Data ss:Type="String">{{ product.productCategory.name|default }}</ss:Data>
                     </ss:Cell>
                     <ss:Cell>
-                        <ss:Data ss:Type="Number">{{ inventoryRepository.getStockByProduct(product)|default }}</ss:Data>
+                        <ss:Data ss:Type="Number">{{ quantityStock|default }}</ss:Data>
                     </ss:Cell>
                     <ss:Cell>
-                        <ss:Data ss:Type="Number">{{ inventoryRepository.getUnitPriceByProduct(product)|default }}</ss:Data>
+                        <ss:Data ss:Type="Number">{{ averagePrice|default }}</ss:Data>
                     </ss:Cell>
                     <ss:Cell>
-                        <ss:Data ss:Type="Number">{{ inventoryRepository.getTotalPriceByProduct(product)|default }}</ss:Data>
+                        <ss:Data ss:Type="Number">{{ totalPrice|default }}</ss:Data>
                     </ss:Cell>
                 </ss:Row>
             {% endfor %}
