--- a/app/Resources/views/report/product_stock/grid.html.twig
+++ b/app/Resources/views/report/product_stock/grid.html.twig
@@ -30,14 +30,17 @@
         </thead>
         <tbody class="border-top-solid-bold border-bottom-solid-bold">
             {% for product in grid.data %}
+                {% set quantityStock = inventoryRepository.getStockByProduct(product) %}
+                {% set averagePrice = inventoryRepository.getUnitPriceByProduct(product) %}
+                {% set totalPrice = quantityStock * averagePrice %}
                 <tr class="border-top-solid-normal border-bottom-solid-normal" data-field-id="{{ product.id }}">
                     <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.name|default }}</td>
                     <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.size|default }}</td>
                     <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.brand.name|default }}</td>
                     <td class="border-left-solid-bold border-right-solid-bold text-left">{{ product.productCategory.name|default }}</td>
-                    <td class="border-left-solid-bold border-right-solid-bold text-center">{{ inventoryRepository.getStockByProduct(product)|default }}</td>
-                    <td class="border-left-solid-bold border-right-solid-bold text-right">{{ inventoryRepository.getUnitPriceByProduct(product)|default|number_format(2) }}</td>
-                    <td class="border-left-solid-bold border-right-solid-bold text-right">{{ inventoryRepository.getTotalPriceByProduct(product)|default|number_format(2) }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-center">{{ quantityStock|default }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-right">{{ averagePrice|default|number_format(2) }}</td>
+                    <td class="border-left-solid-bold border-right-solid-bold text-right">{{ totalPrice|default|number_format(2) }}</td>
                 </tr>
             {% endfor %}
         </tbody>
