--- a/app/Resources/views/transaction/sale_invoice_header/memo_invoice.html.twig
+++ b/app/Resources/views/transaction/sale_invoice_header/memo_invoice.html.twig
@@ -128,6 +128,8 @@
             <div class="table full">
                 <div class="cell sig">
                     <div>Penerima,</div>
+                    <div class="blank"></div>
+                    <div class="blank"></div>
                 </div>
                 <div class="cell sig">
                     <div>Hormat Kami,</div>
@@ -137,6 +139,24 @@
                         <div>TJOE JEN SEN</div>
                     {% endif %}
                 </div>
+            </div>
+        </div>
+        
+        <br />
+        
+        <div class="note">
+            <div class="table">
+                <div class="cell label">BCA CABANG KETAPANG</div>
+            </div>
+        </div>
+        <div class="note">
+            <div class="table">
+                <div class="cell label">Acc : 401 653 7799</div>
+            </div>
+        </div>
+        <div class="note">
+            <div class="table">
+                <div class="cell label">A/n : PT. TRIO PRIMA MAKMUR SEJAHTERA</div>
             </div>
         </div>
     </div>
