--- a/app/Resources/views/transaction/sale_invoice_header/export_coretax.xml.twig
+++ b/app/Resources/views/transaction/sale_invoice_header/export_coretax.xml.twig
@@ -29,9 +29,9 @@
                     <Unit>UM.0021</Unit>
                     <Price>{{ saleInvoiceDetail.unitPrice|default }}</Price>
                     <Qty>{{ saleInvoiceDetail.quantity|default }}</Qty>
-                    <TotalDiscount>0.00</TotalDiscount>
-                    <TaxBase>{{ saleInvoiceDetail.total|default }}</TaxBase>
-                    <OtherTaxBase>{{ saleInvoiceDetail.total|default }}</OtherTaxBase>
+                    <TotalDiscount>{{ saleInvoiceDetail.discount|default }}</TotalDiscount>
+                    <TaxBase>{{ saleInvoiceDetail.unitPriceAfterDiscount|default }}</TaxBase>
+                    <OtherTaxBase>{{ saleInvoiceDetail.coretaxNominal|default }}</OtherTaxBase>
                     <VATRate>12</VATRate>
                     <VAT>{{ saleInvoiceHeader.taxNominal|default }}</VAT>
                     <STLGRate>0</STLGRate>
