--- a/app/Resources/views/transaction/sale_invoice_header/export_coretax.xml.twig
+++ b/app/Resources/views/transaction/sale_invoice_header/export_coretax.xml.twig
@@ -27,9 +27,9 @@
                     <Code>720000</Code>
                     <Name>{{ saleInvoiceDetail.productName|default|raw }} - {{ saleInvoiceDetail.product.size|default|raw }}</Name>
                     <Unit>UM.0021</Unit>
-                    <Price>{{ saleInvoiceDetail.unitPrice|default }}</Price>
+                    <Price>{{ saleInvoiceDetail.unitPriceAfterDiscount|default }}</Price>
                     <Qty>{{ saleInvoiceDetail.quantity|default }}</Qty>
-                    <TotalDiscount>{{ saleInvoiceDetail.discount|default }}</TotalDiscount>
+                    <TotalDiscount>0.00</TotalDiscount>
                     <TaxBase>{{ saleInvoiceDetail.unitPriceAfterDiscount|default }}</TaxBase>
                     <OtherTaxBase>{{ saleInvoiceDetail.coretaxNominal|default }}</OtherTaxBase>
                     <VATRate>12</VATRate>
